[gd_scene load_steps=6 format=3 uid="uid://bw3nuydtbjyyn"]

[ext_resource type="Script" path="res://scripts/spawner.gd" id="1_pju48"]
[ext_resource type="PackedScene" uid="uid://buk03e8nx2ctk" path="res://scenes/chaser.tscn" id="2_slpnx"]
[ext_resource type="PackedScene" uid="uid://ct0x7t0ccdh3n" path="res://scenes/bigboy.tscn" id="3_kjdub"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kpbnt"]
radius = 750.0

[sub_resource type="CircleShape2D" id="CircleShape2D_31pei"]
radius = 100.0

[node name="spawner" type="Marker2D"]
script = ExtResource("1_pju48")
enemy = Array[PackedScene]([ExtResource("2_slpnx"), ExtResource("3_kjdub")])
timer_randomization = true
randomizer = 3.0

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_kpbnt")

[node name="Area2D2" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("CircleShape2D_31pei")
debug_color = Color(0.948816, 1.73271e-06, 0.576496, 0.42)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_area_2d_2_body_exited"]
